[build-system]
requires = [
    "setuptools>=80.4.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
exclude = ["examples", "tests*", "sphinx-doc"]


[tool.setuptools.package-data]
"mfd_network_adapter" = ["network_interface/feature/stats/tools/*.*"]